# Cybabotai

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  docker-compose.yml  package-lock.json  railway.toml  render.yaml
.claude/: settings.local.json
.github/workflows/: ci.yml
ai/cybabot/: __init__.py  crew.py  llm_router.py
ai/cybabot/agents/: __init__.py  backtesting_agent.py  data_scout.py  hypothesis_designer.py  notebook_assembler.py  optimization_guardian.py  performance_analyst.py  risk_specialist.py
ai/cybabot/tools/: __init__.py  backtest_tools.py  data_tools.py  export_tools.py
backend/: .gitignore  Dockerfile  fly.toml  pyproject.toml
backend/app/: __init__.py  config.py  database.py  deps.py  main.py
backend/app/api/: admin.py  auth.py  credits.py  cybabot.py  marketplace.py  websocket.py
backend/app/models/: __init__.py  credit.py  marketplace.py  strategy.py  user.py
backend/app/services/: auth_service.py  credit_service.py  paystack_service.py  stripe_service.py  ws_manager.py
core/: __init__.py  backtester.py  metrics.py  monte_carlo.py  risk_engine.py
data/: __init__.py  duckdb_store.py  dukascopy_downloader.py
exports/: __init__.py  mql5_generator.py  pinescript_generator.py  python_class_generator.py
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/auth/: page.tsx
frontend/src/app/builder/: page.tsx
frontend/src/app/marketplace/: page.tsx
frontend/src/components/builder/: AgentCard.tsx  AgentCrewPanel.tsx  EquityCurve.tsx  ExportPanel.tsx  RadarChart.tsx
frontend/src/components/credits/: BuyCreditsModal.tsx  CreditBadge.tsx
frontend/src/components/landing/: AgentsPreviewSection.tsx  CTASection.tsx  FeaturesSection.tsx  (+3 more)
frontend/src/hooks/: useCredits.ts  useWebSocket.ts
frontend/src/lib/: api.ts  auth.ts  utils.ts
frontend/src/types/: agent.ts  marketplace.ts  strategy.ts
plans/: ARCHITECTURE.md
prisma/: migration.sql  schema.prisma
(+3 files in other folders)
